Added "3D Artist" to title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- SUBTITLE !-->
 
 		<h1>
-			GAME GENERALIST / CONCEPT ARTIST BASED IN NEW ZEALAND
+			GAME GENERALIST / 3D ARTIST / CONCEPT ARTIST BASED IN NEW ZEALAND
 		</h1>
 
 		<h1>
