--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
 	<head>
+
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<link href="styles.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Jura|Rambla" rel="stylesheet" type="text/css" />
@@ -14,6 +15,8 @@
 		<div class="rectangle1"></div>
 
 		<!-- SUBTITLE !-->
+		<article>
+		<article>
 
 		<header>
 			PATRICK MANSON
@@ -32,62 +35,79 @@
 				PATRICKMANSONWORK@GMAIL.COM
 			</a>
 		</h1>
-
+	</article>
+		</article>
 		<!-- PORTFOLIO START !-->
 
-
-
-		<!-- 3D !-->
+			<!-- 3D !-->
 
 				<!-- ENVIRONMENTS !-->
-
-				<p style="align=left; font-family: 'Rambla', sans-serif;">LOW POLY 3D</p>
+				<div style="font-size:0;height:5px;"></div>
+				<div style="font-size:0;height:5px;"></div>
+				<div style="font-size:0;height:5px;"></div>
+				<article>
 				<article>
 
 				<div class="rectangle2"></div>
 				<div style="font-size:0;height:5px;"></div>
 
 				<h2>
-					Environments // Rendered in Unreal Engine 4
+				Weapon Modelling
+				</h2>
+				<!-- Cybergun !-->
+				<div class="sketchfab-embed-wrapper"><iframe width="100%" height="55%"
+				 src="https://sketchfab.com/models/c316fdd966b24500882b8d2d77409f96/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				</div>
+				<div style="font-size:0;height:5px;"></div>
+
+				<img src="images/3D/Gun_Illustration.png" width="100%" />
+
+				<div style="font-size:0;height:5px;"></div>
+				<!-- CARSMG !-->
+				<div class="sketchfab-embed-wrapper"><iframe width="100%" height="55%"
+				src="https://sketchfab.com/models/a730f1f0db69451d8283980db6f238c7/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				</div>
+
+
+
+				<h2>
+				Character Modelling
 				</h2>
 
-				<img src="images/3D/Mineshaft_0.jpg" width="100%" />
+				<div style="font-size:0;height:5px;"></div>
+				<!-- Streetguy !-->
+				<div class="sketchfab-embed-wrapper"><iframe width="100%" height="55%"
+			 	src="https://sketchfab.com/models/8602c9cdee134217abb36d790683578e/embed?autospin=0.2" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				</div>
+
 				<div style="font-size:0;height:5px;"></div>
 
-				<img src="images/3D/Mineshaft_1.jpg" width="100%" />
+				<img src="images/3D/Turnaround_colour.png" width="100%" />
+
 				<div style="font-size:0;height:5px;"></div>
 
-				<img src="images/3D/Mineshaft_2.jpg" width="100%" />
+				<img src="images/3D/Turnaround_wireframe.png" width="100%" />
+
 				<div style="font-size:0;height:5px;"></div>
 
-				<img src="images/3D/Forge_0.jpg" width="100%" />
+				<img src="images/3D/LODS.png" width="100%" />
+
 				<div style="font-size:0;height:5px;"></div>
 
-				<div style="font-size:0;height:50px;"></div>
-
-				</article>
-
+				<!-- Bust !-->
+				<div class="sketchfab-embed-wrapper"><iframe width="100%" height="55%"
+			 	src="https://sketchfab.com/models/8ca673512fa84317866c3df56bf82fd0/embed?autospin=0.2" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				</div>
+				<div style="font-size:0;height:5px;"></div>
 				<!-- OTHER 3D !-->
 
-				<article>
+
 
 				<div class="rectangle2"></div>
 				<div style="font-size:0;height:5px;"></div>
 
 				<h2>
-					Character Design // 2000 Tri, 1024 x 1024 Textures
-				</h2>
-
-				<img src="images/3D/AG_Render_0.jpg" width="49.85%" />
-
-				<img src="images/3D/AG_Render_1.jpg" width="49.85%" />
-				<div style="font-size:0;height:50px;"></div>
-
-				<div class="rectangle2"></div>
-				<div style="font-size:0;height:5px;"></div>
-
-				<h2>
-					Prop Modelling // 500 Tri, 128 x 128 Textures
+					Low Poly Prop Modelling // 500 Tri, 128 x 128 Textures
 				</h2>
 
 				<img src="images/3D/raft_textured.jpg" width="100%" />
@@ -111,15 +131,17 @@
 				<div class="rectangle2"></div>
 				<div style="font-size:0;height:5px;"></div>
 
-				</article>
+
 
 		<!-- END !-->
 
 		<!-- CHARACTER DESIGN !-->
 
-		<p style="align=left; font-family: 'Rambla', sans-serif;">CHARACTER DESIGN</p>
+		<h2>
+		Character Design
+		</h2>
 
-		<article>
+		<img src="images/3D/Drawn_Turnaround.png" width="100%" />
 
 		<img src="images/Unequip/Character_ArmourDesigns.jpg" width="100%" />
 
@@ -140,7 +162,7 @@
 		<img src="images/Ascend/robotdevelopments.jpg" width="100%" />
 
 		</article>
-
+		</article>
 		<!-- END !-->
 
 		<div style="font-size:0;height:75px;"></div>
